# SLP_A1

./: .gitignore  README.md  generate_data_figures.py  pyproject.toml  train.py
configs/: default.yaml  final.yaml
outputs/: model_summary.txt
outputs/logs/: training_history.json
outputs/summaries/: data_split_summary.json  final_results.json
scripts/: eval.sh  export_report_assets.sh  prepare_data.py  train.sh
src/: __init__.py
src/data/: dataset.py  transforms.py
src/engine/: evaluate.py  losses.py  metrics.py  scheduler.py  train.py  utils.py
src/features/: logmel.py  visualize.py
src/models/: bcresnet.py  dscnn.py  model.py
src/report/: export_assets.py
src/tracking/: wandb_logger.py
tests/: test_pipeline.py
